--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask==0.10.1
 Flask-Migrate==1.3.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
+gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
