--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,12 @@ itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
+oauthlib==0.7.2
 psycopg2==2.6
 python-chess==0.8.0
+requests==2.6.2
+requests-oauthlib==0.4.2
+six==1.9.0
 SQLAlchemy==1.0.0
+tweepy==3.3.0
 Werkzeug==0.10.4
